add tokenURIState
