# nft-meta/pkg/mw/v1/token/handler.go
@@ -24,6 +24,7 @@ type Handler struct {
 	TokenID         *string
 	Owner           *string
 	URI             *string
+	URIState        *basetype.TokenURIState
 	URIType         *string
 	ImageURL        *string
 	VideoURL        *string
@@ -170,6 +171,23 @@ func WithURI(u *string, must bool) func(context.Context, *Handler) error {
 		return nil
 	}
 }
+
+func WithURIState(u *basetype.TokenURIState, must bool) func(context.Context, *Handler) error {
+	return func(ctx context.Context, h *Handler) error {
+		if u == nil {
+			if must {
+				return fmt.Errorf("invalid uristate")
+			}
+			return nil
+		}
+		if _, ok := basetype.TokenURIState_name[int32(*u)]; !ok {
+			return fmt.Errorf("invalid uristate field")
+		}
+		h.URIState = u
+		return nil
+	}
+}
+
 func WithURIType(u *string, must bool) func(context.Context, *Handler) error {
 	return func(ctx context.Context, h *Handler) error {
 		if u == nil {
@@ -335,6 +353,12 @@ func WithReqs(reqs []*tokenproto.TokenReq, must bool) func(context.Context, *Han
 			if req.URI != nil {
 				_req.URI = req.URI
 			}
+			if req.URIState != nil {
+				if _, ok := basetype.TokenURIState_name[int32(*req.URIState)]; !ok {
+					return fmt.Errorf("invalid uristate field")
+				}
+				_req.URIState = req.URIState
+			}
 			if req.URIType != nil {
 				_req.URIType = req.URIType
 			}
@@ -452,6 +476,12 @@ func WithConds(conds *tokenproto.Conds) func(context.Context, *Handler) error {
 			h.Conds.URI = &cruder.Cond{
 				Op:  conds.GetURI().GetOp(),
 				Val: conds.GetURI().GetValue(),
+			}
+		}
+		if conds.URIState != nil {
+			h.Conds.URIState = &cruder.Cond{
+				Op:  conds.GetURIState().GetOp(),
+				Val: basetype.TokenURIState(conds.GetURIState().GetValue()),
 			}
 		}
 		if conds.URIType != nil {
